[package]
name = "zxcvbn_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
serde = "1.0"
serde_json = "1.0"
zxcvbn = { version = "2", features = ["ser"] }
